--- a/ReasonerELpp/pom.xml
+++ b/ReasonerELpp/pom.xml
@@ -5,7 +5,15 @@
     <modelVersion>4.0.0</modelVersion>
 
     <dependencies>
-        <dependency> <groupId>net.sourceforge.owlapi</groupId>
+
+        <dependency>
+            <groupId>org.jgrapht</groupId>
+            <artifactId>jgrapht-core</artifactId>
+            <version>1.4.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>net.sourceforge.owlapi</groupId>
             <artifactId>org.semanticweb.hermit</artifactId>
             <version>1.3.8.500</version>
         </dependency>
