--- a/ReasonerELpp/pom.xml
+++ b/ReasonerELpp/pom.xml
@@ -7,6 +7,13 @@
     <dependencies>
 
         <dependency>
+            <groupId>net.sourceforge.owlapi</groupId>
+            <artifactId>org.semanticweb.hermit</artifactId>
+            <version>1.3.8.500</version>
+        </dependency>
+
+
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.13.2</version>
